finish game screen

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <script src="sketch.js"></script>
     <script src="menu.js"></script>
     <script src="note.js"></script>
+    <script src="Explosion.js"></script>
+    <script src="particle.js"></script>
+    <script src="background.js"></script>
   </body>
 </html>
